Library/AXL(Library)/C, C++/AXDev.h

// The API for setting servo to stop mode.
DWORD   __stdcall AxmM3ServoSetCtrlStopMode(long lAxisNo, BYTE bStopMode);
// The API for setting servo to Lt selection state.
DWORD   __stdcall AxmM3ServoSetCtrlLtSel(long lAxisNo, BYTE bLtSel1, BYTE bLtSel2);
// The API for verifying servo I/O input state.
DWORD   __stdcall AxmStatusReadServoCmdIOInput(long lAxisNo, DWORD *upStatus);
// Servo interpolation drive API.
DWORD   __stdcall AxmM3ServoExInterpolate(long lAxisNo, DWORD dwTPOS, DWORD dwVFF, DWORD dwTFF, DWORD dwTLIM, DWORD dwExSig1, DWORD dwExSig2);
// The API for setting bias of the servo actuator.
DWORD   __stdcall AxmM3ServoSetExpoAccBias(long lAxisNo, WORD wBias);
// The API for setting time of the servo actuator.
DWORD   __stdcall AxmM3ServoSetExpoAccTime(long lAxisNo, WORD wTime);
// The API for setting time of the servo move.
DWORD   __stdcall AxmM3ServoSetMoveAvrTime(long lAxisNo, WORD wTime);
// The API for setting acc filter of the servo.
DWORD   __stdcall AxmM3ServoSetAccFilter(long lAxisNo, BYTE bAccFil);
// The API for setting status monitor1 of the servo.
DWORD   __stdcall AxmM3ServoSetCprmMonitor1(long lAxisNo, BYTE bMonSel);
// The API for setting status monitor2 of the servo.
DWORD   __stdcall AxmM3ServoSetCprmMonitor2(long lAxisNo, BYTE bMonSel);
// The API for verifying status monitor1 of the servo.
DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor1(long lAxisNo, DWORD *upStatus);
// The API for verifying status monitor2 of the servo.
DWORD   __stdcall AxmM3ServoStatusReadCprmMonitor2(long lAxisNo, DWORD *upStatus);
// The API for setting Dec of servo actuator.
DWORD   __stdcall AxmM3ServoSetAccDec(long lAxisNo, WORD wAcc1, WORD wAcc2, WORD wAccSW, WORD wDec1, WORD wDec2, WORD wDecSW);
// The API for servo stop.
DWORD   __stdcall AxmM3ServoSetStop(long lAxisNo, long lMaxDecel);
//========== Common commands of standard I/O dvices =========================================================================
// The API for return parameter setting value of each slave device.
DWORD   __stdcall AxlM3GetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);
// The API for setting parameter value of each slave device.
DWORD   __stdcall AxlM3SetStationParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);
// The API for return ID value of each slave device.
DWORD   __stdcall AxlM3GetStationIdRd(long lBoardNo, long lModuleNo, BYTE bIdCode, BYTE bOffset, BYTE bSize, BYTE bModuleType, BYTE *pbParam);
// The API used as invalid command of each slave device.
DWORD   __stdcall AxlM3SetStationNop(long lBoardNo, long lModuleNo, BYTE bModuleType);
// The API for set up each slave device.
DWORD   __stdcall AxlM3SetStationConfig(long lBoardNo, long lModuleNo, BYTE bConfigMode, BYTE bModuleType);
// The API for return alarm and warning status value of each slave device.
DWORD   __stdcall AxlM3GetStationAlarm(long lBoardNo, long lModuleNo, WORD wAlarmRdMod, WORD wAlarmIndex, BYTE bModuleType, WORD *pwAlarmData);
// The API for clearing alarm and warning status value of each slave device.
DWORD   __stdcall AxlM3SetStationAlarmClear(long lBoardNo, long lModuleNo, WORD wAlarmClrMod, BYTE bModuleType);
// The API for setting establish synchronous communication with each slave device.
DWORD   __stdcall AxlM3SetStationSyncSet(long lBoardNo, long lModuleNo, BYTE bModuleType);
// The API for setting connection with each slave device.
DWORD   __stdcall AxlM3SetStationConnect(long lBoardNo, long lModuleNo, BYTE bVer, BYTE bComMode, BYTE bComTime, BYTE bProfileType, BYTE bModuleType);
// The API for setting disconnection with each slave device.
DWORD   __stdcall AxlM3SetStationDisConnect(long lBoardNo, long lModuleNo, BYTE bModuleType);
// The API for return of non-volatile parameter setting value.
DWORD   __stdcall AxlM3GetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);
// The API for setting non-volatile parameter value of each slave device.
DWORD   __stdcall AxlM3SetStationStoredParameter(long lBoardNo, long lModuleNo, WORD wNo, BYTE bSize, BYTE bModuleType, BYTE *pbParam);
// The API for return of memory setting value of each slave device.
DWORD   __stdcall AxlM3GetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);
// The API for setting memory value of each slave device.
DWORD   __stdcall AxlM3SetStationMemory(long lBoardNo, long lModuleNo, WORD wSize, DWORD dwAddress, BYTE bModuleType, BYTE bMode, BYTE bDataType, BYTE *pbData);
//========== Connection commands of standard I/O dvices =========================================================================
// The API for setting value of automatic access mode of each re-ordered slave device.
DWORD   __stdcall AxlM3SetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE bRWSMode);
// The API for return of automatic access mode setting value of each re-ordered slave device.
DWORD   __stdcall AxlM3GetStationAccessMode(long lBoardNo, long lModuleNo, BYTE bModuleType, BYTE *bRWSMode);
// The API for set synchronous auto connect mode of each slave device.
DWORD   __stdcall AxlM3SetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD dwAutoSyncConnectMode);
// The API for return of synchronous auto connect mode setting value of each slave device.
DWORD   __stdcall AxlM3GetAutoSyncConnectMode(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *dwpAutoSyncConnectMode);
// The API for establish a single synchronization connection to each slave device.
DWORD   __stdcall AxlM3SyncConnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);
// The API for establish a single synchronization disconnection to each slave device.
DWORD   __stdcall AxlM3SyncDisconnectSingle(long lBoardNo, long lModuleNo, BYTE bModuleType);
// The API for verifying connection status with slave device.
DWORD   __stdcall AxlM3IsOnLine(long lBoardNo, long lModuleNo, DWORD *dwData);
//========== Profile commands of standard I/O =========================================================================
// The API for return of data setting value for each synchronous I/O slave device.
DWORD   __stdcall AxlM3GetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for setting data value for each synchronous I/O slave device.
DWORD   __stdcall AxlM3SetStationRWS(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for return of data setting value for each asynchronous I/O slave device.
DWORD   __stdcall AxlM3GetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// The API for setting data value for each asynchronous I/O slave device.
DWORD   __stdcall AxlM3SetStationRWA(long lBoardNo, long lModuleNo, BYTE bModuleType, DWORD *pdwParam, BYTE bSize);
// Set the MLIII adjustment operation
// dwReqCode == 0x1005 : parameter initialization : 20sec
// dwReqCode == 0x1008 : absolute encoder reset   : 5sec
// dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
// dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
DWORD   __stdcall AxmM3AdjustmentOperation(long lAxisNo, DWORD dwReqCode);
// API for diagnosing home search progress.(Only for M3)
DWORD    __stdcall AxmHomeGetM3FWRealRate(long lAxisNo, DWORD *upHomeMainStepNumber, DWORD *upHomeSubStepNumber, DWORD *upHomeLastMainStepNumber, DWORD *upHomeLastSubStepNumber);
// Return adjusted position value when escaping sensor zone from origin search.(Only for M3)
DWORD   __stdcall AxmHomeGetM3OffsetAvoideSenArea(long lAxisNo, double *dPos);
// The API for Setting adjusted position value when escaping sensor zone from origin search.(Only for M3)
// If dPos setting value is '0', adjusted position value will be set automatically when automatically escaping.
// 'dPos' should be a positive number.
DWORD   __stdcall AxmHomeSetM3OffsetAvoideSenArea(long lAxisNo, double dPos);
// Setting usage criterion of absolute encoder. Set whether to CMD/ACT POS initialize after origin search.(Only for M3)
// dwSel: 0, CMD/ACTPOS will be set '0' after origin search.(Default)
// dwSel: 1, CMD/ACTPOS will be not set after origin search.
DWORD   __stdcall AxmM3SetAbsEncOrgResetDisable(long lAxisNo, DWORD dwSel);
// Get 'AxmM3SetAbsEncOrgResetDisable' setting value.(Only for M3)
// upSel: 0, CMD / ACTPOS set to 0 after home search. (Default)
// upSel: 1, CMD / ACTPOS value is not set after home search.
DWORD   __stdcall AxmM3GetAbsEncOrgResetDisable(long lAxisNo, DWORD *upSel);
// Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
// dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
DWORD   __stdcall AxmM3SetOfflineAlarmEnable(long lAxisNo, DWORD dwSel);
// Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
// upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
DWORD   __stdcall AxmM3GetOfflineAlarmEnable(long lAxisNo, DWORD *upSel);
// Read value of slave online or offline status. (Only for M3)
// upSel: 0, ONLINE->OFFLINE Not converted
// upSel: 1, ONLINE->OFFLINE converted
DWORD   __stdcall AxmM3ReadOnlineToOfflineStatus(long lAxisNo, DWORD *upStatus);
DWORD   __stdcall AxlSetLockMode(long lBoardNo, WORD wLockMode);
DWORD   __stdcall AxlSetLockData(long lBoardNo, DWORD dwTotalNodeNum, DWORD *dwpNodeNo, DWORD *dwpNodeID, DWORD *dwpLockData);
DWORD   __stdcall AxmMoveStartPosWithAVC(long lAxisNo, double dPosition, double dMaxVelocity, double dMaxAccel, double dMinJerk, double *dpMoveVelocity, double *dpMoveAccel, double *dpMoveJerk);
//======== API for EtherCAT only =============================================================================
// The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
DWORD  __stdcall AxlECatGetProductInfo(DWORD dwStationAddress, DWORD* pdwVendorID, DWORD* pdwProductCode, DWORD* pdwRevisionNo);
DWORD  __stdcall AxlECatGetProductInfoEx(long lBoardNo, DWORD dwStationAddress, DWORD* pdwVendorID, DWORD* pdwProductCode, DWORD* pdwRevisionNo);
// The API for verifying network status of EtherCAT slave product by using StationAddress.
DWORD  __stdcall AxlECatGetModuleStatus(DWORD dwStationAddress);