Library/AXL(Library)/Delphi/AXDev.pas


// The API for setting servo to stop mode.
function AxmM3ServoSetCtrlStopMode(lAxisNo : LongInt; byStopMode : Byte) : DWord; stdcall;
// The API for setting servo to Lt selection state.
function AxmM3ServoSetCtrlLtSel(lAxisNo : LongInt; byLtSel1 : Byte; byLtSel2 : Byte) : DWord; stdcall;
// The API for verifying servo I/O input state.
function AxmStatusReadServoCmdIOInput(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
// Servo interpolation drive API.
function AxmM3ServoExInterpolate(lAxisNo : LongInt; dwTPOS : DWord; dwVFF : DWord; dwTLIM : DWord; dwExSig1 : DWord; dwExSig2 : DWord) : DWord; stdcall;
// The API for setting bias of the servo actuator.
function AxmM3ServoSetExpoAccBias(lAxisNo : LongInt; wBias : Word) : DWord; stdcall;
// The API for setting time of the servo actuator.
function AxmM3ServoSetExpoAccTime(lAxisNo : LongInt; wTime : Word) : DWord; stdcall;
// The API for setting time of the servo move.
function AxmM3ServoSetMoveAvrTime(lAxisNo : LongInt; wTime : Word) : DWord; stdcall;
// The API for setting acc filter of the servo.
function AxmM3ServoSetAccFilter(lAxisNo : LongInt; byAccFil : Byte) : DWord; stdcall;
// The API for setting status monitor1 of the servo.
function AxmM3ServoSetCprmMonitor1(lAxisNo : LongInt; byMonSel : Byte) : DWord; stdcall;
// The API for setting status monitor2 of the servo.
function AxmM3ServoSetCprmMonitor2(lAxisNo : LongInt; byMonSel : Byte) : DWord; stdcall;
// The API for verifying status monitor1 of the servo.
function AxmM3ServoStatusReadCprmMonitor1(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
// The API for verifying status monitor2 of the servo.
function AxmM3ServoStatusReadCprmMonitor2(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;
// The API for setting Dec of servo actuator.
function AxmM3ServoSetAccDec(lAxisNo : LongInt; wAcc1 : Word; wAcc2 : Word; wAccSW : Word; wDec1 : Word; wDec2 : Word; wDecSW : Word) : DWord; stdcall;
// The API for servo stop.
function AxmM3ServoSetStop(lAxisNo : LongInt; lMaxDecel : LongInt) : DWord; stdcall;

//========== Common commands of standard I/O dvices =========================================================================
// The API for return parameter setting value of each slave device.
function AxlM3GetStationParameter(lBoardNo : LongInt; lModuleNo : LongInt; wNo : Word; bySize : Byte; byModuleType : Byte; bypParam : PByte) : DWord; stdcall;
// The API for setting parameter value of each slave device.
function AxlM3SetStationParameter(lBoardNo : LongInt; lModuleNo : LongInt; wNo : Word; bySize : Byte; byModuleType : Byte; bypParam : PByte) : DWord; stdcall;
// The API for return ID value of each slave device.
function AxlM3GetStationIdRd(lBoardNo : LongInt; lModuleNo : LongInt; byIdCode : Byte; byOffset : Byte; bySize : Byte; bModuleType : Byte; bypParam : PByte) : DWord; stdcall;
// The API used as invalid command of each slave device.
function AxlM3SetStationNop(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte) : DWord; stdcall;
// The API for set up each slave device.
function AxlM3SetStationConfig(lBoardNo : LongInt; lModuleNo : LongInt; byConfigMode : Byte; byModuleType : Byte) : DWord; stdcall;
// The API for return alarm and warning status value of each slave device.
function AxlM3GetStationAlarm(lBoardNo : LongInt; lModuleNo : LongInt; wAlarmRdMod : Word; wAlarmIndex : Word; byModuleType : Byte; wpAlarmData : PWord) : DWord; stdcall;
// The API for clearing alarm and warning status value of each slave device.
function AxlM3SetStationAlarmClear(lBoardNo : LongInt; lModuleNo : LongInt; wAlarmClrMod : Word; byModuleType : Byte) : DWord; stdcall;
// The API for setting establish synchronous communication with each slave device.
function AxlM3SetStationSyncSet(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte) : DWord; stdcall;
// The API for setting connection with each slave device.
function AxlM3SetStationConnect(lBoardNo : LongInt; lModuleNo : LongInt; byVer : Byte; byComMode : Byte; byComTime : Byte; byProfileType : Byte; byModuleType : Byte) : DWord; stdcall;
// The API for setting disconnection with each slave device.
function AxlM3SetStationDisConnect(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte) : DWord; stdcall;
// The API for return of non-volatile parameter setting value.
function AxlM3GetStationStoredParameter(lBoardNo : LongInt; lModuleNo : LongInt; wNo : Word; bySize : Byte; byModuleType : Byte; bypParam : PByte) : DWord; stdcall;
// The API for setting non-volatile parameter value of each slave device.
function AxlM3SetStationStoredParameter(lBoardNo : LongInt; lModuleNo : LongInt; wNo : Word; bySize : Byte; byModuleType : Byte; bypParam : PByte) : DWord; stdcall;
// The API for return of memory setting value of each slave device.
function AxlM3GetStationMemory(lBoardNo : LongInt; lModuleNo : LongInt; wSize : Word; dwAddress : DWord; byModuleType : Byte; byMode : Byte; byDataType : Byte; bypData : PByte) : DWord; stdcall;
// The API for setting memory value of each slave device.
function AxlM3SetStationMemory(lBoardNo : LongInt; lModuleNo : LongInt; wSize : Word; dwAddress : DWord; byModuleType : Byte; byMode : Byte; byDataType : Byte; bypData : PByte) : DWord; stdcall;

//========== Connection commands of standard I/O dvices =========================================================================
// The API for setting value of automatic access mode of each re-ordered slave device.
function AxlM3SetStationAccessMode(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; byRWSMode : Byte) : DWord; stdcall;
// The API for return of automatic access mode setting value of each re-ordered slave device.
function AxlM3GetStationAccessMode(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; bypRWSMode : PByte) : DWord; stdcall;
// The API for set synchronous auto connect mode of each slave device.
function AxlM3SetAutoSyncConnectMode(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwAutoSyncConnectMode : DWord) : DWord; stdcall;
// The API for return of synchronous auto connect mode setting value of each slave device.
function AxlM3GetAutoSyncConnectMode(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwpAutoSyncConnectMode : PDWord) : DWord; stdcall;
// The API for establish a single synchronization connection to each slave device.
function AxlM3SyncConnectSingle(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte) : DWord; stdcall;
// The API for establish a single synchronization disconnection to each slave device.
function AxlM3SyncDisconnectSingle(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte) : DWord; stdcall;
// The API for verifying connection status with slave device.
function AxlM3IsOnLine(lBoardNo : LongInt; lModuleNo : LongInt; dwpData : PDWord) : DWord; stdcall;

//========== Profile commands of standard I/O =========================================================================
// The API for return of data setting value for each synchronous I/O slave device.
function AxlM3GetStationRWS(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwpParam : PDWord; bySize : Byte) : DWord; stdcall;
// The API for setting data value for each synchronous I/O slave device.
function AxlM3SetStationRWS(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwpParam : PDWord; bySize : Byte) : DWord; stdcall;
// The API for return of data setting value for each asynchronous I/O slave device.
function AxlM3GetStationRWA(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwpParam : PDWord; bySize : Byte) : DWord; stdcall;
// The API for setting data value for each asynchronous I/O slave device.
function AxlM3SetStationRWA(lBoardNo : LongInt; lModuleNo : LongInt; byModuleType : Byte; dwpParam : PDWord; bySize : Byte) : DWord; stdcall;

// Set the MLIII adjustment operation
// dwReqCode == 0x1005 : parameter initialization : 20sec
// dwReqCode == 0x1008 : absolute encoder reset   : 5sec
// dwReqCode == 0x100E : automatic offset adjustment of motor current detection signals  : 5sec
// dwReqCode == 0x1013 : Multiturn limit setting  : 5sec
function AxmM3AdjustmentOperation(lAxisNo : LongInt; dwReqCode : DWord) : DWord; stdcall;

// API for diagnosing home search progress.(Only for M3)
function AxmHomeGetM3FWRealRate(lAxisNo : LongInt; dwpHomeMainStepNumber : PDWord; dwpHomeSubStepNumber : PDWord; dwpHomeLastMainStepNumber : PDWord; dwpHomeLastSubStepNumber : PDWord) : DWord; stdcall;
// Return adjusted position value when escaping sensor zone from origin search.(Only for M3)
function AxmHomeGetM3OffsetAvoideSenArea(lAxisNo : LongInt; dpPos : PDouble) : DWord; stdcall;
// The API for Setting adjusted position value when escaping sensor zone from origin search.(Only for M3)
// If dPos setting value is '0', adjusted position value will be set automatically when automatically escaping.
// 'dPos' should be a positive number.
function AxmHomeSetM3OffsetAvoideSenArea(lAxisNo : LongInt; dPos : Double) : DWord; stdcall;


// Setting usage criterion of absolute encoder. Set whether to CMD/ACT POS initialize after origin search.(Only for M3)
// dwSel: 0, CMD/ACTPOS will be set '0' after origin search.(Default)
// dwSel: 1, CMD/ACTPOS will be not set after origin search.
function AxmM3SetAbsEncOrgResetDisable(lAxisNo : LongInt; dwSel : DWord) : DWord; stdcall;

// Get 'AxmM3SetAbsEncOrgResetDisable' setting value.(Only for M3)
// upSel: 0, CMD / ACTPOS set to 0 after home search. (Default)
// upSel: 1, CMD / ACTPOS value is not set after home search.
function AxmM3GetAbsEncOrgResetDisable(lAxisNo : LongInt; dwpSel : PDWord) : DWord; stdcall;


// Setting whether using alarm maintenance function when switch to slave offline mode.(Only for M3)
// dwSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// dwSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
function AxmM3SetOfflineAlarmEnable(lAxisNo : LongInt; dwSel : DWord) : DWord; stdcall;

// Get 'AxmM3SetOfflineAlarmEnable' setting value.(Only for M3)
// upSel: 0, ML3 Slave ONLINE-> OFFLINE Alarm handling disabled. (Default)
// upSel: 1, ML3 Slave ONLINE-> OFFLINE Alarm handling enabled.
function AxmM3GetOfflineAlarmEnable(lAxisNo : LongInt; dwpSel : PDWord) : DWord; stdcall;

// Read value of slave online or offline status. (Only for M3)
// upSel: 0, ONLINE->OFFLINE Not converted
// upSel: 1, ONLINE->OFFLINE converted
function AxmM3ReadOnlineToOfflineStatus(lAxisNo : LongInt; dwpStatus : PDWord) : DWord; stdcall;

    function AxlSetLockMode (lBoardNo : LongInt; wLockMode : Word) : DWord; stdcall;
function AxlSetLockData(lBoardNo : LongInt; dwTotalNodeNum : DWord; dwpNodeNo : PDWord; dwpNodeID : PDWord; dwpLockData : PDWord) : DWord; stdcall;
    function AxmMoveStartPosWithAVC (lAxisNo : LongInt; dPosition : Double; dMaxVelocity : Double; dMaxAccel : Double; dMinJerk : Double; dpMoveVelocity : PDouble; dpMoveAccel : PDouble; dpMoveJerk : PDouble) : DWord; stdcall;
//======== For EtherCAT Only =============================================================================
// The API for read VendorID, ProductCode and RevisionNo of EtherCat slave product by using StationAddress.
function AxlECatGetProductInfo(dwStationAddress : DWord; dwpVendorID : PDWord; dwpProductCode : PDWord; dwpRevisionNo : PDWord) : DWord; stdcall;
    function AxlECatGetProductInfoEx (lBoardNo : LongInt; dwStationAddress : DWord; pdwVendorID : PDWord; pdwProductCode : PDWord; pdwRevisionNo : PDWord) : DWord; stdcall;

// The API for verifying network status of EtherCAT slave product by using StationAddress.
function AxlECatGetModuleStatus(dwStationAddress : DWord) : DWord; stdcall;
